[package]
name = "kdl2html"
version = "0.1.0"
edition = "2021"
authors = ["Alex Sayers <alex@asayers.com>"]
license = "Unlicense"

[dependencies]
anyhow = "1.0.83"
bpaf = { version = "0.9.12", features = ["derive"] }
kdl = "4.6.0"
miette = { version = "5.10", features = ["fancy"] }
pulldown-cmark = "0.11.0"
